# kstream

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  main.cpp
tests/: CMakeLists.txt
