CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(imc)

SET(CPP_STANDARD 17)

SET(CMAKE_CXX_FLAGS "-std=c++1z -Wall -Wextra -Werror -g")

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(GTest CONFIG REQUIRED) 

ADD_EXECUTABLE(imc "main.cpp")

TARGET_LINK_LIBRARIES(imc 
    PUBLIC Threads::Threads
)

TARGET_INCLUDE_DIRECTORIES(imc 
    PUBLIC "."
)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)