CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(kstream)

SET(CPP_STANDARD 20)

SET(CMAKE_CXX_FLAGS "--std=c++20 -Wall -Wextra -Werror -g")

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(GTest REQUIRED) 

ADD_EXECUTABLE(kstream "main.cpp")

TARGET_LINK_LIBRARIES(kstream 
    PUBLIC Threads::Threads
)

TARGET_INCLUDE_DIRECTORIES(kstream 
    PUBLIC "."
)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)