ADD_EXECUTABLE(kstreamtest 
    main.cpp
)
TARGET_COMPILE_FEATURES(kstreamtest PRIVATE cxx_std_17)
TARGET_INCLUDE_DIRECTORIES(kstreamtest PRIVATE ${GTEST_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(kstreamtest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(kstreamtest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src)
TARGET_LINK_LIBRARIES(kstreamtest PRIVATE GTest::gtest 
    GTest::gmock
)

ADD_TEST(
    NAME kstreamtest
    COMMAND kstreamtest
)